--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
-AUTH0_ISSUER_BASE_URL="https://"
-AUTH0_CLIENT_ID=
-AUTH0_CLIENT_SECRET=
+AUTH0_ISSUER_BASE_URL="https://dev-x2zur21tv0hr1i1u.us.auth0.com"
+AUTH0_CLIENT_ID="W3P7bGuRqTv8FoHqcQvKxbg2wayBbZ3E"
+AUTH0_CLIENT_SECRET="wpm3xKoWSQ9dIyLrbrOoLAG65lYRsXgaRNHRn4k_4qAO8YvtILQpqsZfrh0tfpV5"
 AUTH0_BASE_URL="http://localhost:3000"
-AUTH0_SECRET=
+AUTH0_SECRET="d43225b481fdb8ccc12cdc1afb5dbf3a"
